[package]
name = "ABC305"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
cli_test_dir = "0.1.7"
